[package]
authors = ["KILT <info@kilt.io>"]
description = "Enables adding and removing decentralized identifiers (DIDs)."
edition = "2021"
name = "did"
repository = "https://github.com/KILTprotocol/kilt-node"
version = "1.8.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}

[dev-dependencies]
env_logger = "0.9.0"
serde = "1.0.144"

ctype = {features = ["mock"], path = "../ctype"}

frame-benchmarking = {branch = "polkadot-v0.9.29", git = "https://github.com/paritytech/substrate"}
pallet-balances = {branch = "polkadot-v0.9.29", git = "https://github.com/paritytech/substrate"}
sp-keystore = {branch = "polkadot-v0.9.29", git = "https://github.com/paritytech/substrate"}

[dependencies]
# Internal dependencies
ctype = {path = "../ctype", optional = true}
kilt-support = {default-features = false, path = "../../support"}

# External dependencies
hex = {default-features = false, features = ["alloc"], version = "0.4.3"}
log = "0.4.17"
serde = {version = "1.0.142", optional = true, features = ["derive"]}

codec = {package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"]}
frame-support = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate"}
frame-system = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate"}
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
sp-core = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-io = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-runtime = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-std = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate"}

# benchmarking
frame-benchmarking = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate", optional = true}
pallet-balances = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate", optional = true}
sp-keystore = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate", optional = true}

[features]
default = ["std"]
mock = [
  "ctype",
  "pallet-balances",
  "sp-keystore",
]
runtime-benchmarks = [
  # "ctype/runtime-benchmarks", # enabling this results in an error that's impossible to link to this line.
  "frame-benchmarking",
  "pallet-balances/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
]
std = [
  "codec/std",
  "ctype/std",
  "frame-support/std",
  "frame-system/std",
  "hex/std",
  "kilt-support/std",
  "log/std",
  "pallet-balances/std",
  "scale-info/std",
  "serde",
  "sp-core/std",
  "sp-io/std",
  "sp-keystore/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "kilt-support/try-runtime",
]
