[package]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
name = "did"
description = "Enables adding and removing decentralized identifiers (DIDs)."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
env_logger.workspace = true

ctype = {workspace = true, features = ["mock"]}
kilt-support = {workspace = true, features = ["mock", "try-runtime"]}

frame-benchmarking = {workspace = true, features = ["std"]}
pallet-balances = {workspace = true, features = ["std"]}
sp-keystore = {workspace = true, features = ["std"]}

[dependencies]
# External dependencies
fluent-uri.workspace = true
log.workspace = true

# Internal dependencies
kilt-support.workspace = true

ctype = {workspace = true, optional = true}

# Substrate dependencies
parity-scale-codec = {workspace = true, features = ["derive"]}
frame-support.workspace = true
frame-system.workspace = true
scale-info = {workspace = true, features = ["derive"]}
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

# Benchmarking dependencies
frame-benchmarking = {workspace = true, optional = true}
pallet-balances = {workspace = true, optional = true}
sp-keystore = {workspace = true, optional = true}

[features]
default = ["std"]
mock = [
  "ctype",
  "pallet-balances",
  "sp-keystore",
]
runtime-benchmarks = [
  # "ctype/runtime-benchmarks", # enabling this results in an error that's impossible to link to this line.
  "frame-benchmarking",
  "pallet-balances/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "fluent-uri/std",
  "parity-scale-codec/std",
  "ctype/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-support/std",
  "log/std",
  "pallet-balances/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-keystore/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "kilt-support/try-runtime",
]
