[package]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
name = "dip-receiver"
description = "Enables receiving merkelized DID information from a provider."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder.workspace = true

[dependencies]
# Internal dependencies
dip-support.workspace = true
kilt-support.workspace = true

# Substrate dependencies
codec = {package = "parity-scale-codec", workspace = true, features = ["derive"]}
cumulus-pallet-xcm.workspace = true
frame-support.workspace = true
frame-system.workspace = true
scale-info = {workspace = true, features = ["derive"]}
sp-std.workspace = true

[features]
default = ["std"]
std = [
  "codec/std",
  "cumulus-pallet-xcm/std",
  "dip-support/std",
  "kilt-support/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-std/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
