[package]
authors.workspace = true
description = "Pallet enabling to send some form of identity information to a specified destination."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "pallet-dip-sender"
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Internal dependencies
dip-support.workspace = true

# Substrate dependencies
codec = {package = "parity-scale-codec", workspace = true, features = ["derive"]}
frame-support.workspace = true
frame-system.workspace = true
scale-info = {workspace = true, features = ["derive"]}
sp-std.workspace = true

# Polkadot dependencies
xcm.workspace = true

[features]
default = ["std"]
std = [
  "dip-support/std",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-std/std",
  "xcm/std",
]
