[package]
name = "elections"
version = "1.0.0"
authors = ["KILT <info@kilt.io>"]
edition = "2018"
homepage = "https://kilt.io"
repository = "https://github.com/KILTprotocol/mashnet-node"
description = "Simplified version of elections-phragmen with delegated elections."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-runtime = { branch = "polkadot-v0.9.8", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-npos-elections = { branch = "polkadot-v0.9.8", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-io = { branch = "polkadot-v0.9.8", default-features = false, git = "https://github.com/paritytech/substrate"}
frame-support = { branch = "polkadot-v0.9.8", default-features = false, git = "https://github.com/paritytech/substrate"}
frame-system = { branch = "polkadot-v0.9.8", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-std = { branch = "polkadot-v0.9.8", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-core = { branch = "polkadot-v0.9.8", default-features = false, git = "https://github.com/paritytech/substrate"}
frame-benchmarking = { branch = "polkadot-v0.9.8", default-features = false, git = "https://github.com/paritytech/substrate", optional = true}
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
pallet-balances = { branch = "polkadot-v0.9.8", git = "https://github.com/paritytech/substrate"}
sp-core = { branch = "polkadot-v0.9.8", git = "https://github.com/paritytech/substrate"}
substrate-test-utils = { branch = "polkadot-v0.9.8", git = "https://github.com/paritytech/substrate"}

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-npos-elections/std",
	"frame-system/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
