[package]
authors = ["KILT <info@kilt.io>"]
description = "Enables automatic unlocking of balance from genesis block"
edition = "2018"
name = "kilt-launch"
repository = "https://github.com/KILTprotocol/mashnet-node"
version = "1.3.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"]}
log = {default-features = false, version = "0.4.14"}
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = {version = "1.0.124", optional = true}

frame-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12", optional = true}
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12"}
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12"}
pallet-vesting = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12"}

# benchmarking
kilt-primitives = {path = "../../primitives", default-features = false, optional = true}

[dev-dependencies]
kilt-primitives = {path = "../../primitives", default-features = false}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12"}
sp-io = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12"}

[features]
default = ["std"]

runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "kilt-primitives",
]
std = [
  "codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-primitives/std",
  "log/std",
  "pallet-balances/std",
  "pallet-vesting/std",
  "scale-info/std",
  "serde",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
]
