[package]
authors       = { workspace = true }
description   = "Pallet enabling local assets to be exchanged for remote assets with a predefined exchange ratio."
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license-file  = { workspace = true }
name          = "pallet-asset-swap"
readme        = "README.md"
repository    = { workspace = true }
version       = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support      = { workspace = true }
frame-system       = { workspace = true }
log                = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info         = { workspace = true, features = ["derive"] }
sp-core            = { workspace = true }
sp-io              = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }
xcm                = { workspace = true }
xcm-executor       = { workspace = true }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "xcm-executor/std",
  "xcm/std",
]
